--- a/index.html
+++ b/index.html
@@ -262,13 +262,14 @@
                       </video>
                   </div>
                   <h6>About the project</h6>
-                    <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the highest score possible before dying.</p>
+                    <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with immersive VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the highest score possible before dying. Our inspirations for the game include old school space-sims such as Wing Commander and Elite Dangerous as well as roguelikes such as FTL.</p>
                   <h6>Contribution</h6>
-                    <p>I worked with a team of 4 other engineers and a 3D artist to create Red Dwarf. As the team was very small we often shared responsibilities. My contributions include most of the design and implementation for the player UI and collision physics, as well as the implementation of player controls and weapon mechanics.</p>
+                    <p>I worked with a team of 4 other engineers and a 3D artist to create Red Dwarf. My contributions include most of the design and implementation for the player UI, as well as the implementation of player controls, weapon mechanics, and physics effects. I also dabbled in the implementation of particle effects and enemy AI.</p>
                   <h6>Accomplishments/Challenges</h6>
-                    <p>Our biggest challenge was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I am most proud of designing the radar which gives players 360 degree awareness of their surroundings.</p>
+                    <p>As this is my first fully comprehensive indie game project I learned a great deal about game design and teamwork. I also learned more about worldspace UI and developing controls for multiple platforms (keyboard &amp; Vive) simultaneously.<br>One of our greatest design challenges was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I designed and implemented the radar system which gives players 360 degree awareness of their surroundings. Through user testing we found that this gyroscopic display tended to greatly reduce motion sickness.
+                    </p>
                   <h6>What's next?</h6>
-                    <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris. We hope to release an alpha version of the game some time in the next year.</p>
+                    <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris to create an open world for players to explore. We hope to release an alpha version of the game some time in the next year.</p>
                     <ul class="list-inline item-details">    
                     <a href="builds/RedDwarf.zip">
                         <h3 class="btn btn-success btn-lg">
@@ -281,7 +282,7 @@
                     </p>
                     <li>Tools:
                       <strong>
-                        <span>Unity, C#, Visual Studio, SteamVR, VRTK, HTC Vive</span>
+                        <span>Unity, C#, GIT, Visual Studio, SteamVR, VRTK, HTC Vive</span>
                       </strong>
                     </li>
                     <li>Date:
@@ -360,13 +361,13 @@
                     <!-- /Carousel -->
                     <p>Battle Of The Bards was originally created in just 24 hours at the HackPoly 2017 hackathon, winning <strong>'Best Game Hack'</strong> and <strong>'2nd Place Overall'</strong> vs 71 competing projects.</p><br> 
                     <h6>About the project</h6>
-                    <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of cards by playing rhythm game segments with a guitar controller or keyboard. Their performance determines the effectiveness of the spells.                 </p>
+                    <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of cards by playing rhythm game segments with a guitar controller or keyboard. Their performance determines the effectiveness of the spells. </p>
                   <h6>Contribution</h6>
-                    <p>I worked with another engineer and 2 artists to create Battle of the Bards. My contributions include most of the design and implementation for the player UI and spell mechanics.</p>
+                    <p>I worked with another engineer and 2 artists to create Battle of the Bards using all original assets. My contributions include most of the design and implementation for the player UI and spell mechanics including the note detection system.</p>
                   <h6>Accomplishments/Challenges</h6>
-                    <p>Our biggest challenge was coordinating our team to work effectively during the 24 hour time frame. All of our art and code was original and created by our team during the 24 hour competition. I believe the fact that we were all good friends contributed to our success and ability to work together.</p>
+                    <p>I was fortunate to be able to work with 2 talented artists for this project. Due to the competition's harsh 24 hour time limit, I learned a great deal about how to coordinate effectively with a multidisciplinary team. I also learned more about implementing player UI, turn based mechanics, and the use of sounds in games.</p>
                   <h6>What's next?</h6>
-                    <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally hope to release the game as a mobile app to make it easily accessible to as many people as possible.</p>
+                    <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally plan to release the game as a mobile app to make it easily accessible to as many people as possible.</p>
                     <ul class="list-inline item-details">    
                     <a href="builds/BattleOfTheBards.zip">
                         <h3 class="btn btn-success btn-lg">
